# Software-integration

./: package-lock.json  package.json
00._Assignments/10b/: clearTargetDb.js  createDatabases.js  knexfile.js  migrate.js  package-lock.json  package.json
00._Assignments/11a/: README.md  index.html
00._Assignments/11b/: package-lock.json  package.json  server.js
00._Assignments/granular_assignment/: README.md  init.sql
01._introduction/: getgooglehome.sh  index.html
02._Text-based_Data_Formats/: me.csv  me.json  me.txt  me.xml  me.yaml
03._Modules/html_classic/: index.html  myModule.js
03._Modules/html_esmodules/: index.html  index.js  myModule.js
03._Modules/node_commonjs/: index.js  myModule.js
03._Modules/node_esmodules/: myModule.js
03._Modules/python_main/: library_importer.py  potential_library.py
03._Modules/python_modules/: main.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: main.py
05._Python_Virtual_Environments/01._venv/: main.py
05._Python_Virtual_Environments/03._poetry/: main.py  package-lock.json  pyproject.toml
06._Simple_Servers/01._node/: app.js
06._Simple_Servers/02._python/: main.py  pyproject.toml
08._Server-Server/: README.md
08._Server-Server/01._node/: app.js
08._Server-Server/02._python/: main.py
09._Environment_Variables/01._node/: app.js  package-lock.json  package.json
09._Environment_Variables/02._python/: pyproject.toml
10._Date/01._node/: index.js
10._Date/02._python/: main.py
11._Short_Polling/01._node/: app.js
17._Database_Migrations/: mydatabase_mro_docs.html
17._Database_Migrations/02._python_alempic/: pyproject.toml
17._Database_Migrations/02._python_alempic/alembic/versions/: b8e5031601fd_create_accounts_table.py
18._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js  package-lock.json  package.json
23._Embedded_Youtube/: embeddedyoutube.html
26._GraphQL/04._python_ariadne/: pyproject.toml
27._Web_Scraping_Web_Crawling/03._python_web_crawler/: pyproject.toml
(+95 files in other folders)
