[project]
name = "02-python-alempic"
version = "0.1.0"
description = ""
authors = [
    {name = "SimonBD1",email = "simo20k3@stud.kea.dk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "02"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
