[project]
name = "04-python-ariadne"
version = "0.1.0"
description = ""
authors = [
    {name = "SimonBD1",email = "simo20k3@stud.kea.dk"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "ariadne (>=0.26.2,<0.27.0)"
]

[tool.poetry]
packages = [{include = "04"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
